Correcion de Clases

--- a/style.css
+++ b/style.css
@@ -54,8 +54,8 @@ section.menu{
     align-items: center;
     justify-content: space-between;
     margin-bottom: 45px;
-    padding-left: 85px;
-    padding-right: 85px;  
+    padding-left: 5%;
+    padding-right: 5%;  
 }
 
 .menu__header{
@@ -79,8 +79,8 @@ margin: 10px;
 /*Sección Title*/
 
 section.title{
-    padding-left: 85px;
-    padding-right: 85px;
+    padding-left: 5%;
+    padding-right: 5%; 
 }
 
 .title__div{
@@ -99,8 +99,8 @@ section.title{
 }
 
 .about__container{
-    padding-left: 85px;
-    padding-right: 85px;
+    padding-left: 5%;
+    padding-right: 5%; 
 }
 
 .title__bio{
@@ -141,8 +141,8 @@ section.about{
 
 /*Sección Hobbies*/
 section.hobbies, section.skills{
-    padding-left: 85px;
-    padding-right: 85px;
+    padding-left: 5%;
+    padding-right: 5%; 
     padding-bottom: 60px;
 }
 
@@ -195,8 +195,8 @@ section.academic h2{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding-left: 85px;
-    padding-right: 85px;
+    padding-left: 5%;
+    padding-right: 5%; 
 }
 
 .academic__courses__item__img{
@@ -228,7 +228,18 @@ section.experience{
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between; 
+    justify-content: space-around; 
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.experiencie__box__reverse{
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content:space-between;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .experience__section__title{
@@ -238,8 +249,9 @@ section.experience{
 
 
 .experience__info{
-    justify-content: flex-start;
+    justify-content:flex-start;
     padding-left: 10px;
+    
 }
 
 .experience__repo a button{
@@ -262,12 +274,12 @@ section.experience{
     color: white;   
 }
 
-.experiencie__box__reverse{
+.experience__description{
     display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
-    justify-content:space-between;
+    
 }
+
+
 
 /*Contacto*/
 
